arkts_static_test/06_Contexts_Conversions/ets_cases/6.1_Assignment_like_Contexts/compile-fail/CON_06_01_023_FAIL_CONSTRUCTOR_ARGUMENT_MISMATCH.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id CON_06_01_023_FAIL_CONSTRUCTOR_ARGUMENT_MISMATCH
 * @expect compile-fail
 * @section 6.1
 * @design Call context: 髀句怯竄ｬ迥ｲ讚堤昼蜀ｪ謨､轢ｹ轤ｲ蠑ｬ扈ｫ隸ｲ轢ｷ(number)豸灘ｺ｡闊ｰ骰吝–陲ｫ骰ｨ?string)豸灘ｶɾｰｮ髢ｰ蠍◒ｬ夜純迥ｻ谿｣蟇ｮ蠢壽ｵ㋠嫉?
 * @note 骰吝ｶʃ–髏｢繖､邱･髞帶ｰｶ迯咏仲菴ｽ蠟夐恨辜俶ｫ呎清譁ｾ鬪匀世辭ｺ邏ｪ迺勤剝讀る盟谺悌丰
 */
class Item {
  public label: string
  constructor(l: string) {
    this.label = l
  }
}

function testConstructorArgumentMismatchFail(): void {
  let item: Item = new Item(999)
}